[package]
name = "broker"
resolver = "2"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
publish = false

[package.metadata.release]
release = false

[dependencies]
alloy = { workspace = true, features = ["network", "providers", "transports", "sol-types", "contract", "signers", "signer-local", "rpc", "rpc-types"] }
alloy-chains = "0.1"
anyhow = { workspace = true }
async-channel = "2.3"
async-trait = { workspace = true }
bincode = { workspace = true }
bonsai-sdk = { workspace = true }
boundless-assessor = { workspace = true }
boundless-market = { workspace = true }
bytemuck = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
futures = "0.3"
futures-util = { workspace = true }
# TEMP:
guest-assessor = { workspace = true }
guest-set-builder = { workspace = true }
http = "1.1"
notify = "6.1"
reqwest = { workspace = true }
risc0-aggregation = { workspace = true }
risc0-ethereum-contracts = { workspace = true, features = ["unstable"] }
risc0-zkvm = { workspace = true, features = ["std", "client"] }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true, features = [ "sqlite", "runtime-tokio", "json", "migrate", "macros" ] }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "fs"] }
toml = "0.8"
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
url = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
alloy = { workspace = true, features = ["node-bindings"] }
boundless-market = { workspace = true, features = ["test-utils"] }
broker = { path = ".", features = ["test-utils"] }
elsa = "1.11"
guest-assessor = { workspace = true }
guest-util = { workspace = true }
hex = { workspace = true }
httpmock = "0.7"
proptest = "1.4"
proptest-derive = "0.4"
rand = { workspace = true }
risc0-zkvm = { workspace = true, default-features = true }
tokio = { workspace = true, features = ["full"] }
tracing-test = "0.2"

[features]
test-utils = ["boundless-market/test-utils"]
