[package]
name = "boundless-distributor"
resolver = "2"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
publish = false

[package.metadata.release]
release = false

[dependencies]
alloy = { workspace = true, features = ["network", "node-bindings", "rpc-types", "providers", "transports", "sol-types", "contract", "signers", "signer-local"] }
anyhow = { workspace = true }
boundless-market = { workspace = true }
clap = { workspace = true, features = ["env"] }
hex = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
risc0-zkvm = { workspace = true, features = ["std", "default"] }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["json", "fmt", "env-filter"] }
url = { workspace = true }

[dev-dependencies]
boundless-market-test-utils = { workspace = true }
tracing-test = { workspace = true }

[features]
