[package]
name = "boundless-indexer"
resolver = "2"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
publish = false

[package.metadata.release]
release = false

[dependencies]
alloy = { workspace = true, features = ["network", "node-bindings", "rpc-types", "providers", "transports", "sol-types", "contract", "signers", "signer-local"] }
anyhow = { workspace = true }
async-trait = { workspace = true }
boundless-market = { workspace = true }
clap = { workspace = true }
hex = { workspace = true }
sqlx = { workspace = true, features = [ "any", "postgres", "sqlite", "runtime-tokio", "json", "migrate", "macros" ] }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
url = { workspace = true }

[dev-dependencies]
boundless-cli = { workspace = true }
boundless-market = { workspace = true }
boundless-market-test-utils = { workspace = true }
futures-util = { workspace = true }
indexer-monitor = { path = "../ops-lambdas/indexer-monitor" }
risc0-zkvm = { workspace = true, features = ["std", "default"] }
tracing-test = { workspace = true }

