[package]
name = "libroker"
resolver = "2"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
publish = false

[package.metadata.release]
release = false

[dependencies]
alloy = { workspace = true, features = ["network", "providers", "transports", "sol-types", "contract", "signers", "signer-local", "rpc", "rpc-client-ws", "provider-ws", "transport-ws", "rpc-types"] }
alloy-chains = "0.1"
anyhow = { workspace = true }
async-channel = "2.3"
async-trait = { workspace = true }
broker = { path = "../broker" }
balance-alerts-layer = { workspace = true }
bincode = { workspace = true }
bonsai-sdk = { workspace = true }
boundless-assessor = { workspace = true }
boundless-market = { workspace = true }
bytemuck = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
futures = "0.3"
futures-util = { workspace = true }
# TEMP:
guest-assessor = { workspace = true }
guest-set-builder = { workspace = true }
http = "1.1"
http-cache-reqwest = "0.15.1"
notify = "6.1"
reqwest = { workspace = true }
reqwest-middleware = "0.4.1"
risc0-aggregation = { workspace = true }
risc0-ethereum-contracts = { workspace = true, features = ["unstable"] }
risc0-zkvm = { workspace = true, features = ["std", "client"] }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true, features = [ "sqlite", "runtime-tokio", "json", "migrate", "macros" ] }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "fs"] }
toml = "0.8"
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
url = { workspace = true }
uuid = { workspace = true }

# TODO ideally not pulling in as dep
boundless-cli = { path = "../boundless-cli" }