[package]
name = "market-tracker"
resolver = "2"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
publish = false

[package.metadata.release]
release = false

[dependencies]
alloy = { workspace = true, features = ["network", "node-bindings", "rpc-types", "providers", "transports", "sol-types", "contract", "signers", "signer-local"] }
anyhow = { workspace = true }
async-trait = { workspace = true }
balance-alerts-layer = { workspace = true }
boundless-market = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
colored = { version = "3.0" }
dotenvy = { workspace = true }
hex = { workspace = true }
reqwest = { workspace = true }
risc0-zkvm = { workspace = true, features = ["std", "default"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
url = { workspace = true }
