[package]
name = "order-stream"
resolver = "2"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
alloy = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
async-stream = { workspace = true }
axum = { workspace = true, features = ["ws"] }
boundless-market = { workspace = true, features = ["test-utils"] }
clap = { workspace = true, features = ["env", "derive"] }
futures-util = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true, features = ["postgres", "migrate", "macros", "runtime-tokio"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["signal"] }
tower-http = { workspace = true, features = ["limit"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
utoipa = { workspace = true, features = ["axum_extras"] }
utoipa-swagger-ui = { version = "8.0.3", features = ["axum"] }
