[package]
name = "order-stream"
resolver = "2"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
publish = false

[package.metadata.release]
release = false

[dependencies]
alloy = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
async-stream = { workspace = true }
axum = { workspace = true, features = ["ws"] }
boundless-market = { workspace = true, features = ["test-utils"] }
clap = { workspace = true, features = ["env", "derive"] }
futures-util = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true, features = ["postgres", "migrate", "macros", "runtime-tokio", "tls-rustls", "chrono"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["signal"] }
tokio-util = { version = "0.7", features = ["rt"] }
tower-http = { workspace = true, features = ["limit", "timeout", "trace"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
utoipa = { workspace = true, features = ["axum_extras"] }
utoipa-swagger-ui = { version = "8.0.3", features = ["axum"] }

[dev-dependencies]
guest-assessor = { workspace = true }
guest-set-builder = { workspace = true }
risc0-zkvm = { workspace = true }
