[package]
name = "boundless-prover"
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
alloy = { version = "0.3.3", features = ["node-bindings", "network", "providers", "transports", "signer-local"] }
# alloy-sol-types = { version = "0.8.2", features = ["json"] }
anyhow = "1.0"
async-trait = "0.1"
boundless-market = { workspace = true }
risc0-ethereum-contracts = { workspace = true }
risc0-zkvm = { workspace = true }
serde = { workspace = true }
# TODO check feats
tokio = { workspace = true, features = ["rt", "macros"] }
tracing = "0.1.40"
