[package]
name = "boundless-resolve"
description = "Resolve guest APIs, part of the Boundless Market"
resolver = "2"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = "Apache-2.0"

[dependencies]
anyhow = { workspace = true }
postcard = { workspace = true, features = ["alloc"] }
risc0-aggregation = { workspace = true }
risc0-zkvm = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
guest-resolve = { workspace = true }
guest-set-builder = { workspace = true }
guest-util = { workspace = true }
# TODO(risc0#2342) Remove the requirement that the prove feature be used.
risc0-zkvm = { workspace = true, features = ["client", "prove", "unstable"] }
test-log = { workspace = true }
tracing = { workspace = true }
