[package]
name = "rpc-test-proxy"
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
alloy = { workspace = true, features = ["node-bindings"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "fs"] }
futures = "0.3"
tracing = { workspace = true }
url = { workspace = true }
