[package]
name = "shrink_bitvm2"
resolver = "2"
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
publish = false

[package.metadata.release]
release = false

[dependencies]
anyhow = { workspace = true }
hex = { workspace = true }
num-bigint = { version = "0.4", features = ["std"] }
num-traits = "0.2.19"
risc0-groth16 = { version = "2.0.2", features = ["prove"] }
risc0-zkvm = { workspace = true, features = ["std", "client", "prove"] }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "fs"] }

tracing = { workspace = true }

ark-bn254 = "0.5.0"
ark-ff = "0.5.0"
ark-groth16 = { version = "0.5.0" }
ark-serialize = "0.5.0"
blake3 = { version = "1.5.0" }
