[package]
name = "taskdb"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true, features = [ "runtime-tokio", "postgres", "uuid", "macros", "bigdecimal", "chrono", "migrate", "json", "tls-rustls" ] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal"] }

[dev-dependencies]
clap = { workspace = true, features = ["derive"] }
criterion = { version = "0.5", features = ["async_tokio"] }
rand = "0.8.5"
tracing = { workspace = true, features = ["log"] }
tracing-subscriber = { workspace = true, features = [
    "fmt",
    "env-filter",
] }

[[bench]]
name = "simple"
harness = false
