[package]
name = "workflow-common"
resolver = "2"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
anyhow = { workspace = true }
aws-sdk-s3 = { workspace = true }
bincode = { workspace = true }
serde = { workspace = true }
