[package]
name = "workflow"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-channel = "2.3"
bincode = { workspace = true }
clap = { workspace = true, features = ["env", "derive"] }
deadpool-redis = { workspace = true }
hex = { workspace = true }
redis = { workspace = true, features = ["tokio-rustls-comp", "tokio-comp"] }
risc0-zkvm = { workspace = true, default-features = false, features = ["prove"] }
serde = { workspace = true }
serde_json = { workspace = true }
signal-hook = "0.3"
sqlx = { workspace = true }
taskdb = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["process"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
uuid = { workspace = true }
workflow-common = { workspace = true }

[[bin]]
name = "agent"
path = "src/bin/agent.rs"

[features]
cuda = ["risc0-zkvm/cuda"]
